<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/loginEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="@dimen/spacing_medium"
                android:hint="@string/auth_input_login"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/spacing_medium"
                android:hint="@string/auth_input_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/auth"
            style="@style/Button"
            android:text="@string/auth_sign_in"
            android:background="@drawable/btn_blue_selector"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/auth_sign_up"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>
</LinearLayout>