<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout_details"
        android:layout_width="match_parent"
        android:layout_height="256.0dip"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ImageView
                android:id="@+id/toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_holder"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_gradient"
                android:fitsSystemWindows="true"
                android:visibility="visible" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_white_24dp" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">

            <TextView
                style="@style/EmployeeHeaderTV"
                android:text="@string/employee_name" />

            <TextView
                android:id="@+id/textName"
                style="@style/EmployeeTV" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">

            <TextView
                style="@style/EmployeeHeaderTV"
                android:text="@string/employee_title" />

            <TextView
                android:id="@+id/textTitle"
                style="@style/EmployeeTV"
                android:maxLines="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">

            <TextView
                style="@style/EmployeeHeaderTV"
                android:text="@string/employee_phone" />

            <TextView
                android:id="@+id/textPhone"
                style="@style/EmployeeTV"
                android:autoLink="phone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">

            <TextView
                style="@style/EmployeeHeaderTV"
                android:text="@string/employee_email" />

            <TextView
                android:id="@+id/textEmail"
                style="@style/EmployeeTV"
                android:autoLink="email"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:background="@drawable/fab_call"
        app:elevation="6.0dip"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar_layout_details"
        app:layout_anchorGravity="bottom|center|right"
        app:srcCompat="@drawable/ic_call_white_24dp" />
</android.support.design.widget.CoordinatorLayout>